@@ -2206,6 +2206,7 @@ static void read_post_actions(char *action, char **argum, SOAP_codex_t *codex){
   double *xcut;
   char *filename,*postprocessor;
   bool POSTGRIDONLY;
+  long i,j,k;
 
   np=((readcontrolarg_t *)codex->action_args)->np;
   gl=((readcontrolarg_t *)codex->action_args)->gl;
@@ -2224,6 +2225,13 @@ static void read_post_actions(char *action, char **argum, SOAP_codex_t *codex){
     if (numcut>0) {
       if (*np_post!=*np) {
         /* if *np!=*np_post, then free the xcut domain first */
+        for1DL ( i, gl_post->domain_lim.is, gl_post->domain_lim.ie )
+          for2DL ( j, gl_post->domain_lim.js, gl_post->domain_lim.je )
+            for3DL ( k, gl_post->domain_lim.ks, gl_post->domain_lim.ke )
+              dispose_node ( &( (*np_post)[_ai ( gl_post, i, j, k )] ) );
+            end3DL
+          end2DL
+        end1DL
         free (*np_post);
       }
       xcut=(double *)malloc(numcut*sizeof(double));
@@ -2259,12 +2267,15 @@ static void read_post_actions(char *action, char **argum, SOAP_codex_t *codex){
 
 
 void read_post(char *argum, SOAP_codex_t *codex){
-  #ifdef DISTMPI
+  long i,j,k;
+  np_t *np_post;
+  gl_t gl_post;
+#ifdef DISTMPI
   int rank;
   MPI_Barrier(MPI_COMM_WORLD);
   MPI_Comm_rank(MPI_COMM_WORLD, &rank);
   if (rank!=0) fatal_error("Post module can only be executed with one MPI process. Try -np 1.");    
-  #endif
+#endif
   wfprintf(stdout,"\n");
   codex->action=&read_post_actions;
   codex->function=&read_post_functions;
@@ -2274,6 +2285,16 @@ void read_post(char *argum, SOAP_codex_t *codex){
   add_bdry_types_fluid_to_codex(codex);
 
   SOAP_process_code(argum, codex, SOAP_VARS_KEEP_ALL);
+  np_post = ((readcontrolarg_t *)codex->action_args)->np_post;
+  gl_post = ((readcontrolarg_t *)codex->action_args)->gl_post;
+  for1DL ( i, gl_post.domain_lim.is, gl_post.domain_lim.ie )
+    for2DL ( j, gl_post.domain_lim.js, gl_post.domain_lim.je )
+      for3DL ( k, gl_post.domain_lim.ks, gl_post.domain_lim.ke )
+        dispose_node ( &( np_post[_ai ( &gl_post, i, j, k )] ) );
+      end3DL
+    end2DL
+  end1DL
+  free ( np_post );
 }
 
 
